[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryosieve"
version = "1.0"
authors = [
    { name="Qi Zhang", email="q-zhang20@mails.tsinghua.edu.cn" },
]
description = "CryoSieve: a particle sorting and sieving algorithm for single particle analysis in cryo-EM"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.18",
    "mrcfile>=1.2",
    "starfile>=0.4",
    "cupy>=10",
    "torch>=1.10"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
"Homepage" = "XXXXX"

[project.scripts]
"cryosieve" = "cryosieve.__main__:main"
"cryosieve-core" = "cryosieve.core:core"
